force-app/main/default/objects/GDL_DistributorLink__c/GDL_DistributorLink__c.object-meta.xml
<CustomObject>
    <label>Distributor Link</label>
    <nameField>
        <displayFormat>GDL_L-{0000}</displayFormat>
        <label>Distributor Link ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>