force-app/main/default/objects/GDL_DistributorLink__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target</label>
    <required>true</required>
    <type>Url</type>
</CustomField>